data/all_generated_tests/raw_wast_tests/nop_IncorrectBranchTargetResolution_7.wast
;; 8. **Test Description: `br` with Intermediate `nop` in Structured Block**    - **Scenario**: Insert `nop` at various positions within a structured control block that utilizes `br` for branching.    - **Constraint**: Verifies consistency in resolving branch targets regardless of `nop` positions within the block.    - **Context**: Misinterpretation can cause the branch to land on unintended locations, altering structured block behavior.

(assert_invalid
  (module
    (func $block-br-nop (result i32)
      (block $label_1
        (nop)
        (br $label_1)
        (i32.const 42)
      )
    )
  )
  "type mismatch"
)